# Trilithon

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  phase-map.yaml
.claude/: coherence-invariants.yaml  fix-summaries-1.yaml  fix-summaries-3.yaml  fix-summaries-4.yaml  fix-summaries-5.yaml  fix-summaries-6.yaml  fix-summaries-7.yaml  fix-summaries-8.yaml  (+16 more)
core/: Cargo.toml  README.md  clippy.toml  deny.toml
core/.cargo/: config.toml
core/crates/adapters/: Cargo.toml
core/crates/adapters/migrations/: 0001_init.sql  0002_capability_probe.sql  0003_seed_local_instance.sql  0004_snapshots_immutable.sql  0005_application_id.sql  0005_canonical_json_version.sql  0006_audit_immutable.sql  0007_apply_locks.sql  0008_applied_config_version.sql  0009_drift_events.sql  0010_drift_correlation_unique.sql  0011_tokens.sql  0012_tokens_user_id.sql  README.md
core/crates/adapters/src/: applier_caddy.rs  audit_notes.rs  audit_writer.rs  auth.rs  caddy.rs  config_loader.rs  db_errors.rs  drift.rs  env_provider.rs  http_axum.rs  integrity_check.rs  lib.rs  lock.rs  migrate.rs  rng.rs  secrets_local.rs  sha256_hasher.rs  sqlite_storage.rs  storage_sqlite.rs  test_support.rs  tls_observer.rs  tracing_correlation.rs
core/crates/adapters/src/auth/: bootstrap.rs  passwords.rs  rate_limit.rs  sessions.rs  users.rs
core/crates/adapters/src/caddy/: cache.rs  capability_store.rs  hyper_client.rs  installation_id.rs  probe.rs  reconnect.rs  sentinel.rs  traceparent.rs  validate_endpoint.rs
core/crates/adapters/src/http_axum/: audit_routes.rs  auth_middleware.rs  auth_routes.rs  capabilities.rs  drift_routes.rs  mutations.rs  routes.rs  snapshots.rs  stubs.rs
core/crates/adapters/src/secrets_local/: cipher.rs  file.rs  keychain.rs
core/crates/adapters/src/storage_sqlite/: audit.rs  locks.rs  snapshots.rs
core/crates/adapters/tests/: apply_advisory_lock_blocks_second_process.rs  apply_audit_notes_failure_carries_error_kind.rs  apply_audit_notes_present.rs  apply_caddy_400.rs  apply_caddy_unreachable.rs  apply_concurrency_two_actors.rs  apply_does_not_block_on_tls_issuance.rs  apply_emits_tls_issuance_followup_row.rs  apply_emits_tls_issuance_timeout_row.rs  apply_exactly_one_terminal_row.rs  apply_happy_path.rs  apply_lock_released_on_panic.rs  apply_pointer_unchanged_on_conflict.rs  apply_post_load_equivalence_check.rs  apply_serial_under_32_concurrent_callers.rs  apply_stale_version_rejected.rs  argon2_distinct_passwords_distinct_hashes.rs  argon2_parameters.rs  audit_immutable_delete_aborts.rs  audit_immutable_update_aborts.rs  audit_kind_validation.rs  audit_list_correlation_filter.rs  audit_list_default_limit.rs  audit_list_event_filter.rs  audit_list_max_limit_clamped.rs  audit_list_unknown_event_400.rs  audit_migration_idempotent.rs  audit_query_actor_filter.rs  audit_query_correlation_filter.rs  audit_query_cursor_descending.rs  audit_query_event_filter.rs  audit_query_pagination.rs  audit_query_time_range.rs  audit_row_has_non_null_correlation_id.rs  audit_writer_happy_path.rs  audit_writer_no_bypass.rs  audit_writer_no_diff.rs  audit_writer_storage_failure_propagates.rs  auth_change_password_clears_flag.rs  auth_login_bootstrap_step_up.rs  (+79 more)
core/crates/adapters/tests/caddy/: end_to_end.rs  hyper_real_caddy.rs  probe_persisted.rs  probe_under_one_second.rs  reconnect_against_killed_caddy.rs  sentinel_e2e.rs
core/crates/adapters/tests/cross_phase/: applier_audit_writer.rs  applier_caddy_admin.rs  apply_audit_notes_format.rs  apply_lock_coordination.rs  snapshots_config_version_cas.rs
core/crates/adapters/tests/fixtures/: malformed.toml  minimal.toml
core/crates/cli/: Cargo.toml  build.rs
core/crates/cli/src/: cli.rs  config_show.rs  exit.rs  main.rs  observability.rs  run.rs  shutdown.rs
core/crates/cli/tests/: allow_remote_admin.rs  config_show.rs  drift_task_registered_at_startup.rs  missing_config.rs  pre_tracing_line.rs  signals.rs  storage_startup.rs  utc_timestamps.rs  version.rs
core/crates/cli/tests/fixtures/: malformed.toml  minimal.toml  with_secrets.toml
core/crates/cli/tests/snapshots/: config_show__shows_redacted.snap
core/crates/core/: Cargo.toml  build.rs
core/crates/core/src/: audit.rs  caddy.rs  canonical_json.rs  clock.rs  config.rs  diff.rs  exit.rs  http.rs  lib.rs  lifecycle.rs  model.rs  reconciler.rs  secrets.rs  storage.rs
core/crates/core/src/audit/: event.rs  mod.rs  redactor.rs  row.rs
core/crates/core/src/caddy/: capabilities.rs  client.rs  error.rs  types.rs
core/crates/core/src/config/: env.rs  types.rs
core/crates/core/src/diff/: flatten.rs  ignore_list.rs  resolve.rs
core/crates/core/src/model/: desired_state.rs  global.rs  header.rs  identifiers.rs  matcher.rs  policy.rs  primitive.rs  redirect.rs  route.rs  tls.rs  upstream.rs
core/crates/core/src/mutation/: apply.rs  capability.rs  envelope.rs  error.rs  mod.rs  outcome.rs  patches.rs  types.rs  validate.rs
core/crates/core/src/reconciler/: applier.rs  capability_check.rs  render.rs
core/crates/core/src/reconciler/snapshots/: trilithon_core__reconciler__render__tests__empty_state.snap  trilithon_core__reconciler__render__tests__route_with_policy.snap  trilithon_core__reconciler__render__tests__single_route_with_upstream.snap
core/crates/core/src/schema/: mod.rs  secret_fields.rs
core/crates/core/src/storage/: audit_vocab.rs  error.rs  helpers.rs  in_memory.rs  trait_def.rs  types.rs
core/crates/core/tests/: mutation_props.proptest-regressions  mutation_props.rs  schema_drift.rs
core/crates/core/tests/fixtures/: minimal.toml
core/crates/ffi/: Cargo.toml  build.rs  uniffi.toml
core/crates/ffi/src/: core.udl  lib.rs
core/scripts/: build-xcframework.sh
core/xtask/: Cargo.toml
core/xtask/src/: audit_duplicates.rs  audit_finding_schema.rs  call_graph_summary.rs  cross_cutting_matrix.rs  identifier_frequency.rs  invariant_check.rs  main.rs  migrate_findings.rs  normalize_finding.rs  registry_check.rs  registry_extract.rs  registry_verify.rs  revalidate_findings.rs  set_merge_review_baseline.rs
(+421 files in other folders)
