[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/adapters",
    "crates/cli",
    "crates/ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# ── pure logic (any layer may use) ───────────────────────────────────────────
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
sha2 = "0.10"
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# ── I/O / async / network (adapters + cli only; never import into core) ───────
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
time = { version = "0.3", features = ["formatting"] }
url = { version = "2", features = ["serde"] }
toml = "0.8"

# ── CLI binary (cli only) ─────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }

# ── FFI ───────────────────────────────────────────────────────────────────────
uniffi = { version = "0.31", features = ["cli"] }
uniffi_build = { version = "0.31" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
mod_module_files = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
missing_docs = "warn"
