[package]
name = "trilithon-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
trilithon-core = { path = "../core" }
thiserror = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "migrate", "runtime-tokio", "macros"], default-features = false }
fs2 = "0.4"
async-trait = { workspace = true }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
hyperlocal = "0.9"
hyper-rustls = { version = "0.27", features = ["rustls-native-certs"] }
rustls-pemfile = "2"
http-body-util = "0.1"
bytes = "1"
rand = "0.8"
rustls = "0.23"
parking_lot = "0.12"
time = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
nix = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
url = { workspace = true }
httptest = "0.16"
tracing-subscriber = { workspace = true }

[[test]]
name = "snapshot"
path = "tests/snapshot.rs"

[[test]]
name = "caddy_hyper_real_caddy"
path = "tests/caddy/hyper_real_caddy.rs"

[[test]]
name = "caddy_probe_persisted"
path = "tests/caddy/probe_persisted.rs"

[[test]]
name = "caddy_probe_under_one_second"
path = "tests/caddy/probe_under_one_second.rs"

[[test]]
name = "caddy_reconnect_against_killed_caddy"
path = "tests/caddy/reconnect_against_killed_caddy.rs"

[[test]]
name = "caddy_sentinel_e2e"
path = "tests/caddy/sentinel_e2e.rs"

[[test]]
name = "caddy_end_to_end"
path = "tests/caddy/end_to_end.rs"

[lints]
workspace = true
