[package]
name = "trilithon-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
trilithon-core = { path = "../core" }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "migrate", "runtime-tokio", "macros"], default-features = false }
fs2 = "0.4"
async-trait = { workspace = true }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
hyperlocal = "0.9"
hyper-rustls = { version = "0.27", features = ["rustls-native-certs"] }
rustls-pemfile = "2"
http-body-util = "0.1"
http = "1"
tower = { version = "0.5", features = ["util"] }
pin-project-lite = "0.2"
bytes = "1"
rand = "0.8"
rustls = "0.23"
parking_lot = "0.12"
time = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
nix = { version = "0.27", features = ["user"] }
tokio = { version = "1", features = ["full", "test-util"] }
url = { workspace = true }
httptest = "0.16"
tracing-subscriber = { workspace = true }
ulid = { workspace = true }

[[test]]
name = "audit_writer_happy_path"
path = "tests/audit_writer_happy_path.rs"

[[test]]
name = "audit_writer_no_diff"
path = "tests/audit_writer_no_diff.rs"

[[test]]
name = "audit_writer_storage_failure_propagates"
path = "tests/audit_writer_storage_failure_propagates.rs"

[[test]]
name = "audit_writer_no_bypass"
path = "tests/audit_writer_no_bypass.rs"

[[test]]
name = "snapshot"
path = "tests/snapshot.rs"

[[test]]
name = "audit_immutable_update_aborts"
path = "tests/audit_immutable_update_aborts.rs"

[[test]]
name = "audit_immutable_delete_aborts"
path = "tests/audit_immutable_delete_aborts.rs"

[[test]]
name = "audit_kind_validation"
path = "tests/audit_kind_validation.rs"

[[test]]
name = "audit_migration_idempotent"
path = "tests/audit_migration_idempotent.rs"

[[test]]
name = "audit_query_pagination"
path = "tests/audit_query_pagination.rs"

[[test]]
name = "audit_query_correlation_filter"
path = "tests/audit_query_correlation_filter.rs"

[[test]]
name = "audit_query_time_range"
path = "tests/audit_query_time_range.rs"

[[test]]
name = "audit_query_event_filter"
path = "tests/audit_query_event_filter.rs"

[[test]]
name = "audit_query_actor_filter"
path = "tests/audit_query_actor_filter.rs"

[[test]]
name = "audit_query_cursor_descending"
path = "tests/audit_query_cursor_descending.rs"

[[test]]
name = "caddy_hyper_real_caddy"
path = "tests/caddy/hyper_real_caddy.rs"

[[test]]
name = "caddy_probe_persisted"
path = "tests/caddy/probe_persisted.rs"

[[test]]
name = "caddy_probe_under_one_second"
path = "tests/caddy/probe_under_one_second.rs"

[[test]]
name = "caddy_reconnect_against_killed_caddy"
path = "tests/caddy/reconnect_against_killed_caddy.rs"

[[test]]
name = "caddy_sentinel_e2e"
path = "tests/caddy/sentinel_e2e.rs"

[[test]]
name = "caddy_end_to_end"
path = "tests/caddy/end_to_end.rs"

[[test]]
name = "tracing_propagates_header_correlation_id"
path = "tests/tracing_propagates_header_correlation_id.rs"

[[test]]
name = "tracing_generates_correlation_id_on_absence"
path = "tests/tracing_generates_correlation_id_on_absence.rs"

[[test]]
name = "audit_row_has_non_null_correlation_id"
path = "tests/audit_row_has_non_null_correlation_id.rs"

[[test]]
name = "background_task_seeds_per_iteration"
path = "tests/background_task_seeds_per_iteration.rs"

[lints]
workspace = true
