[package]
name = "trilithon-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
trilithon-core = { path = "../core" }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "migrate", "runtime-tokio", "macros"], default-features = false }
fs2 = "0.4"
async-trait = { workspace = true }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
hyperlocal = "0.9"
hyper-rustls = { version = "0.27", features = ["rustls-native-certs"] }
rustls-pemfile = "2"
http-body-util = "0.1"
http = "1"
axum = { version = "0.8", features = ["tokio", "json"] }
tower = { version = "0.5", features = ["util"] }
pin-project-lite = "0.2"
bytes = "1"
rand = "0.8"
rustls = "0.23"
parking_lot = "0.12"
time = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
nix = { version = "0.27", features = ["signal"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
base64 = "0.22"
dashmap = "6"

[dev-dependencies]
tempfile = "3"
nix = { version = "0.27", features = ["user", "signal"] }
tokio = { version = "1", features = ["full", "test-util"] }
url = { workspace = true }
httptest = "0.16"
tracing-subscriber = { workspace = true }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
reqwest = { version = "0.12", features = ["json"], default-features = false, package = "reqwest" }
ulid = { workspace = true }

[[test]]
name = "audit_writer_happy_path"
path = "tests/audit_writer_happy_path.rs"

[[test]]
name = "audit_writer_no_diff"
path = "tests/audit_writer_no_diff.rs"

[[test]]
name = "audit_writer_storage_failure_propagates"
path = "tests/audit_writer_storage_failure_propagates.rs"

[[test]]
name = "audit_writer_no_bypass"
path = "tests/audit_writer_no_bypass.rs"

[[test]]
name = "snapshot"
path = "tests/snapshot.rs"

[[test]]
name = "audit_immutable_update_aborts"
path = "tests/audit_immutable_update_aborts.rs"

[[test]]
name = "audit_immutable_delete_aborts"
path = "tests/audit_immutable_delete_aborts.rs"

[[test]]
name = "audit_kind_validation"
path = "tests/audit_kind_validation.rs"

[[test]]
name = "audit_migration_idempotent"
path = "tests/audit_migration_idempotent.rs"

[[test]]
name = "audit_query_pagination"
path = "tests/audit_query_pagination.rs"

[[test]]
name = "audit_query_correlation_filter"
path = "tests/audit_query_correlation_filter.rs"

[[test]]
name = "audit_query_time_range"
path = "tests/audit_query_time_range.rs"

[[test]]
name = "audit_query_event_filter"
path = "tests/audit_query_event_filter.rs"

[[test]]
name = "audit_query_actor_filter"
path = "tests/audit_query_actor_filter.rs"

[[test]]
name = "audit_query_cursor_descending"
path = "tests/audit_query_cursor_descending.rs"

[[test]]
name = "caddy_hyper_real_caddy"
path = "tests/caddy/hyper_real_caddy.rs"

[[test]]
name = "caddy_probe_persisted"
path = "tests/caddy/probe_persisted.rs"

[[test]]
name = "caddy_probe_under_one_second"
path = "tests/caddy/probe_under_one_second.rs"

[[test]]
name = "caddy_reconnect_against_killed_caddy"
path = "tests/caddy/reconnect_against_killed_caddy.rs"

[[test]]
name = "caddy_sentinel_e2e"
path = "tests/caddy/sentinel_e2e.rs"

[[test]]
name = "caddy_end_to_end"
path = "tests/caddy/end_to_end.rs"

[[test]]
name = "tracing_propagates_header_correlation_id"
path = "tests/tracing_propagates_header_correlation_id.rs"

[[test]]
name = "tracing_generates_correlation_id_on_absence"
path = "tests/tracing_generates_correlation_id_on_absence.rs"

[[test]]
name = "audit_row_has_non_null_correlation_id"
path = "tests/audit_row_has_non_null_correlation_id.rs"

[[test]]
name = "background_task_seeds_per_iteration"
path = "tests/background_task_seeds_per_iteration.rs"

[[test]]
name = "apply_happy_path"
path = "tests/apply_happy_path.rs"

[[test]]
name = "apply_caddy_400"
path = "tests/apply_caddy_400.rs"

[[test]]
name = "apply_caddy_unreachable"
path = "tests/apply_caddy_unreachable.rs"

[[test]]
name = "apply_post_load_equivalence_check"
path = "tests/apply_post_load_equivalence_check.rs"

[[test]]
name = "apply_concurrency_two_actors"
path = "tests/apply_concurrency_two_actors.rs"

[[test]]
name = "apply_stale_version_rejected"
path = "tests/apply_stale_version_rejected.rs"

[[test]]
name = "apply_pointer_unchanged_on_conflict"
path = "tests/apply_pointer_unchanged_on_conflict.rs"

[[test]]
name = "apply_serial_under_32_concurrent_callers"
path = "tests/apply_serial_under_32_concurrent_callers.rs"

[[test]]
name = "apply_lock_released_on_panic"
path = "tests/apply_lock_released_on_panic.rs"

[[test]]
name = "apply_advisory_lock_blocks_second_process"
path = "tests/apply_advisory_lock_blocks_second_process.rs"

[[test]]
name = "drift_default_interval_is_60s"
path = "tests/drift_default_interval_is_60s.rs"

[[test]]
name = "drift_clean_state_silent"
path = "tests/drift_clean_state_silent.rs"

[[test]]
name = "drift_out_of_band_mutation"
path = "tests/drift_out_of_band_mutation.rs"

[[test]]
name = "drift_skip_when_apply_in_flight"
path = "tests/drift_skip_when_apply_in_flight.rs"

[[test]]
name = "drift_interval_overridable"
path = "tests/drift_interval_overridable.rs"

# ── Cross-phase seam tests (Phase 7) ─────────────────────────────────────────

[[test]]
name = "cross_phase_applier_caddy_admin"
path = "tests/cross_phase/applier_caddy_admin.rs"

[[test]]
name = "cross_phase_applier_audit_writer"
path = "tests/cross_phase/applier_audit_writer.rs"

[[test]]
name = "cross_phase_snapshots_config_version_cas"
path = "tests/cross_phase/snapshots_config_version_cas.rs"

[[test]]
name = "cross_phase_apply_lock_coordination"
path = "tests/cross_phase/apply_lock_coordination.rs"

[[test]]
name = "cross_phase_apply_audit_notes_format"
path = "tests/cross_phase/apply_audit_notes_format.rs"

[[test]]
name = "http_health_returns_200"
path = "tests/http_health_returns_200.rs"

[[test]]
name = "http_loopback_default"
path = "tests/http_loopback_default.rs"

[[test]]
name = "http_remote_bind_rejected_without_flag"
path = "tests/http_remote_bind_rejected_without_flag.rs"

[[test]]
name = "http_remote_bind_warns_with_flag"
path = "tests/http_remote_bind_warns_with_flag.rs"

[[test]]
name = "http_openapi_placeholder"
path = "tests/http_openapi_placeholder.rs"

[[test]]
name = "argon2_parameters"
path = "tests/argon2_parameters.rs"

[[test]]
name = "argon2_distinct_passwords_distinct_hashes"
path = "tests/argon2_distinct_passwords_distinct_hashes.rs"

[[test]]
name = "users_create_and_verify"
path = "tests/users_create_and_verify.rs"

[[test]]
name = "users_wrong_password_fails"
path = "tests/users_wrong_password_fails.rs"

[[test]]
name = "sessions_round_trip"
path = "tests/sessions_round_trip.rs"

[[test]]
name = "sessions_expiry_honoured"
path = "tests/sessions_expiry_honoured.rs"

[[test]]
name = "cookie_codec_round_trip"
path = "tests/cookie_codec_round_trip.rs"

[[test]]
name = "rate_limit_admits_first_five_failures"
path = "tests/rate_limit_admits_first_five_failures.rs"

[[test]]
name = "rate_limit_backoff_caps_at_60s"
path = "tests/rate_limit_backoff_caps_at_60s.rs"

[[test]]
name = "bootstrap_creates_file_mode_0600"
path = "tests/bootstrap_creates_file_mode_0600.rs"

[[test]]
name = "bootstrap_skips_when_users_exist"
path = "tests/bootstrap_skips_when_users_exist.rs"

[[test]]
name = "bootstrap_password_not_in_logs"
path = "tests/bootstrap_password_not_in_logs.rs"

[[test]]
name = "bootstrap_must_change_pw_set"
path = "tests/bootstrap_must_change_pw_set.rs"

[lints]
workspace = true
