[package]
name = "trilithon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "trilithon"
path = "src/main.rs"

[dependencies]
trilithon-core = { path = "../core" }
trilithon-adapters = { path = "../adapters" }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
nix = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
