[package]
name = "trilithon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "trilithon"
path = "src/main.rs"

[dependencies]
trilithon-core = { path = "../core" }
trilithon-adapters = { path = "../adapters" }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
regex = "1"
insta = { version = "1", features = ["toml"] }
tempfile = "3"

[lints]
workspace = true
