[package]
name = "trilithon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
ulid = { workspace = true }
schemars = "0.8"

[dev-dependencies]
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { version = "1", features = ["sync", "macros", "rt"], default-features = false }
ulid = { workspace = true }
proptest = "1"

# IMPORTANT: `core` must NOT depend on adapters or cli, or on any I/O crate.
# This is the architectural rule — enforced by the absence of those deps.

[lints]
workspace = true
