[package]
name = ".-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "._ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
.-core = { path = "../core" }
.-adapters = { path = "../adapters" }
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[lints]
workspace = true
