[package]
name = "trilithon-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "trilithon_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
trilithon-core = { path = "../core" }
trilithon-adapters = { path = "../adapters" }
uniffi = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
uniffi_build = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
mod_module_files = "deny"
missing_const_for_fn = "allow"  # Generated code doesn't make const functions
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[lints.rust]
unsafe_code = "allow"
unreachable_pub = "warn"
missing_docs = "warn"
